// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getConfig should return config with defaults 1`] = `
Object {
  "chunkSize": 9007199254740991,
  "concurrent": true,
  "gitDir": ".",
  "globOptions": Object {
    "dot": true,
    "matchBase": true,
  },
  "linters": Array [],
  "renderer": "update",
  "subTaskConcurrency": 1,
  "verbose": false,
}
`;

exports[`getConfig should return config with defaults for undefined 1`] = `
Object {
  "chunkSize": 9007199254740991,
  "concurrent": true,
  "gitDir": ".",
  "globOptions": Object {
    "dot": true,
    "matchBase": true,
  },
  "linters": Array [],
  "renderer": "update",
  "subTaskConcurrency": 1,
  "verbose": false,
}
`;

exports[`getConfig should set linters 1`] = `
Object {
  "chunkSize": 9007199254740991,
  "concurrent": true,
  "gitDir": ".",
  "globOptions": Object {
    "dot": true,
    "matchBase": true,
  },
  "linters": Array [
    Object {
      "commands": Array [
        "eslint --fix",
        "git add",
      ],
      "includes": Array [
        "*.js",
      ],
    },
    Object {
      "commands": "jsonlint",
      "includes": Array [
        ".*rc",
      ],
    },
  ],
  "renderer": "update",
  "subTaskConcurrency": 1,
  "verbose": false,
}
`;
